JumpScript/tests/baselines/reference/continueTarget6.errors.txt
tests/cases/compiler/continueTarget6.jump(2,3): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.


==== tests/cases/compiler/continueTarget6.jump (1 errors) ====
    while (true) {
      continue target;
      ~~~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
    }